# movie-analysis

./: .gitignore  Makefile  README.md  SETUP.md  pyproject.toml  requirements.txt
data/: README.md
docs/: SPEC.md
outputs/: REPORT.md
scripts/: 00_refresh_raw.py  01_clean_data.py  02_analyze_genres.py  03_analyze_financials.py  04_build_model.py
tests/: test_analyze_financials.py  test_analyze_genres.py  test_build_model.py  test_clean_helpers.py
