[project]
name = "movie-analysis"
version = "0.1.0"
description = "Git workshop starter project for movie ratings analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pytest",
    "ruff",
    "scikit-learn",
    "ty",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.uv]
# Use the default virtualenv in .venv within the project
# uv will create and manage .venv automatically with `uv sync`
